# robolint

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  README.md  example-robolintrc  mypy.ini  pyproject.toml  pytest.ini  requirements-compile.txt  requirements-dev-Linux.txt  requirements-dev-Windows.txt  requirements-dev.in
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md
.github/workflows/: code-checks.yaml  compile-requirements.yaml
.github/workflows/scripts/: Activate.ps1  Set-Alias
src/: .pylint-spelling-private-dict  pylintrc
src/hooks/: pip_tools_hook.py
src/robolint/: __init__.py  constants.py  exceptions.py  robolinter.py  run.py  test_utils.py  utils.py
src/robolint/checkers/: base_checkers.py  hardcoded_values.py  labware.py  looping.py  robocase.py  tip_checkers.py  variables.py
src/robolint/hooks/: enforce_workspace_settings.py  strip_workspace_config_values.py  utils.py
tests/: conftest.py  pylintrc
tests/unit/: utils.py
tests/unit/enforce_workspace_settings/: test_enforce_values.py  test_main.py
tests/unit/enforce_workspace_settings/workspace_settings_configs/: always_reconnect_false.xml  clean.xml  close_on_success_false.xml  (+4 more)
tests/unit/pip_tools_hook/: test_compile.py  test_sync.py  utils.py
tests/unit/robolint/: fixtures.py  test_checker_error_is_handled.py  test_robolinter.py
tests/unit/strip_workspace_variables/: test_main.py  test_strip_values_from_file.py
(+64 files in other folders)
